Text Formatter/tests/error/badparam6.tx
\textheight{0} Text height of zero is not valid.
